<resources>
    <string name="app_name">Ejercicio04ElementosCodigo</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="numero">NUMERO</string>
    <string name="ciudad">CIUDAD</string>
    <string name="provincia">PROVINCIA</string>
    <string name="cp">CP</string>
    <string name="valoracion">VALORACION</string>
    <string name="cancelar">CANCELAR</string>
    <string name="crear">CREAR</string>
</resources>