<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".EditPisoActivity">

    <EditText
        android:id="@+id/txtDireccionEditPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtNumeroEditPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtCiudadEditPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtProvinciaEditPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/provincia"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtCPEditPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/cp"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <RatingBar
        android:id="@+id/rbValoracionEditPiso"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnBorrarEditPiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="BORRAR" />

        <Button
            android:id="@+id/BtnEditarEditPiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="EDITAR" />
    </LinearLayout>
</LinearLayout>